// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFixturesTicker rugby should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker rugby should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker with flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker with flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly with fixturesPageUrl 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly with fixturesPageUrl 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly with isApp property 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje cjTULJ"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly with isApp property 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje cjTULJ"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker with flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker with flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with fixturesPageUrl 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with fixturesPageUrl 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje gQHnKF"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with isApp property 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje cjTULJ"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with isApp property 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje cjTULJ"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
